@@ -1870,10 +1870,8 @@ void
 clear_global_section_list ()
 {
   if (global_section_list)
-    {
-      gtk_widget_destroy (global_section_list);
-      g_object_unref (global_section_list);
-    }
+    g_object_unref (global_section_list);
+
   global_section_list = NULL;
 }
 
