@@ -1,3 +1,9 @@
+2007-12-11  Mario Sanchez Prada  <msanchez@maemo.org>
+
+	* src/util.cc (clear_global_section_list): Don't call
+	gtk_widget_destroy, let the g_object_unref() and the related
+	gtk_container_remove() functions do the work.
+
 2007-12-10  Mario Sanchez Prada  <msanchez@maemo.org>
 
 	* src/operations.cc (ip_install_cur_reply): Set 'refresh_needed'
